--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
   },
   "license": "MIT",
   "dependencies": {
-    "mongodb": "^4.8.0"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "inversify": "^6.0.1",
+    "inversify-express-utils": "^6.4.3",
+    "joi": "^17.6.0",
+    "mongodb": "^4.8.0",
+    "mongoose": "^6.4.6",
+    "reflect-metadata": "^0.1.13",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/inversify": "^2.0.33",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.0.6",
+    "@types/shortid": "^0.0.29",
     "typescript": "^4.7.4"
   }
 }
