--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
   "scripts": {
     "pre-build": "rm -rf ./dist",
     "build": "yarn run pre-build && yarn tsc -p ./tsconfig.build.json",
-    "ts-node": "ts-node",
-    "go": "node ./dist/server.js"
+    "go": "node ./dist/startup.js",
+    "verify-format": "prettier --check src/**",
+    "format": "prettier --write src/**",
+    "leggo": "nodemon --watch './**/*.ts' --exec 'ts-node' src/startup.ts"
   },
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "gen-env-types": "^1.3.4",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^2.2.0",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.6",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16"
   },
@@ -25,9 +32,13 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/inversify": "^2.0.33",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.0.6",
     "@types/shortid": "^0.0.29",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
